; ModuleID = '/home/carl/AnghaBench/seafile/common/index/extr_name-hash.c_index_name_exists.c'
source_filename = "/home/carl/AnghaBench/seafile/common/index/extr_name-hash.c_index_name_exists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32, %struct.cache_entry* }
%struct.index_state = type { i32 }

@CE_UNHASHED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.cache_entry* @index_name_exists(%struct.index_state* %0, i8* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.cache_entry*, align 8
  %6 = alloca %struct.index_state*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.cache_entry*, align 8
  store %struct.index_state* %0, %struct.index_state** %6, align 8
  store i8* %1, i8** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %12 = load i8*, i8** %7, align 8
  %13 = load i32, i32* %8, align 4
  %14 = call i32 @hash_name(i8* %12, i32 %13)
  store i32 %14, i32* %10, align 4
  %15 = load %struct.index_state*, %struct.index_state** %6, align 8
  %16 = call i32 @lazy_init_name_hash(%struct.index_state* %15)
  %17 = load i32, i32* %10, align 4
  %18 = load %struct.index_state*, %struct.index_state** %6, align 8
  %19 = getelementptr inbounds %struct.index_state, %struct.index_state* %18, i32 0, i32 0
  %20 = call %struct.cache_entry* @lookup_hash(i32 %17, i32* %19)
  store %struct.cache_entry* %20, %struct.cache_entry** %11, align 8
  br label %21

21:                                               ; preds = %41, %4
  %22 = load %struct.cache_entry*, %struct.cache_entry** %11, align 8
  %23 = icmp ne %struct.cache_entry* %22, null
  br i1 %23, label %24, label %45

24:                                               ; preds = %21
  %25 = load %struct.cache_entry*, %struct.cache_entry** %11, align 8
  %26 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %25, i32 0, i32 0
  %27 = load i32, i32* %26, align 8
  %28 = load i32, i32* @CE_UNHASHED, align 4
  %29 = and i32 %27, %28
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %41, label %31

31:                                               ; preds = %24
  %32 = load %struct.cache_entry*, %struct.cache_entry** %11, align 8
  %33 = load i8*, i8** %7, align 8
  %34 = load i32, i32* %8, align 4
  %35 = load i32, i32* %9, align 4
  %36 = call i64 @same_name(%struct.cache_entry* %32, i8* %33, i32 %34, i32 %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %40

38:                                               ; preds = %31
  %39 = load %struct.cache_entry*, %struct.cache_entry** %11, align 8
  store %struct.cache_entry* %39, %struct.cache_entry** %5, align 8
  br label %46

40:                                               ; preds = %31
  br label %41

41:                                               ; preds = %40, %24
  %42 = load %struct.cache_entry*, %struct.cache_entry** %11, align 8
  %43 = getelementptr inbounds %struct.cache_entry, %struct.cache_entry* %42, i32 0, i32 1
  %44 = load %struct.cache_entry*, %struct.cache_entry** %43, align 8
  store %struct.cache_entry* %44, %struct.cache_entry** %11, align 8
  br label %21

45:                                               ; preds = %21
  store %struct.cache_entry* null, %struct.cache_entry** %5, align 8
  br label %46

46:                                               ; preds = %45, %38
  %47 = load %struct.cache_entry*, %struct.cache_entry** %5, align 8
  ret %struct.cache_entry* %47
}

declare dso_local i32 @hash_name(i8*, i32) #1

declare dso_local i32 @lazy_init_name_hash(%struct.index_state*) #1

declare dso_local %struct.cache_entry* @lookup_hash(i32, i32*) #1

declare dso_local i64 @same_name(%struct.cache_entry*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
